2009-09-15 Riccardo Mottola <rmottola@users.sf.net>
	
	* Headers/ProjectCenter/PCProject.h
	* Framework/PCProject.m
	Removed execToolName

	* Framework/PCProjectLauncher.m
	Launch executable directly without openapp/opentool and do not use
	execToolName to determine the project type
	
2009-06-23 18:22-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCProject.m
	* Framework/PCProjectManager.m
	* Headers/ProjectCenter/PCProjectManager.h
	* PCAppController.m: Correct issues with project bundle loading.

2009-05-19 17:13-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Resources/Info-gnustep.plist: Added PCProjectFileType to the
	entry for pcproj to allow opening of bundles.

2009-06-10 Riccardo Mottola
	
	* Framework/PCProject.m,
	* Framework/PCProjectManager.m
	* Framework/PCProjectWindow.m
	* Headers/ProjectCenter/PCDefines.h
	use PCDefine constant for PC_WINDOWS dictionary key

2009-06-10 Riccardo Mottola
	
	* Framework/PCProject.m
	save last editing in user file inside the wrapper and not 
	main project file
	
2009-05-19 17:13-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCEditorManager.m: Added code in -openEditorForFile:
	editable:windowed: to open files which are not handled by any editor
	using [NSWorkspace openFile:] as a fallback.

2009-05-18 17:27-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCProject.m: Add new project directory name.
	* Framework/PCProjectManager.m: Fix issue reported with loading of
	subprojects from an aggregate project.   Changed loadProjectAt: method
	to handle both the current and old file locations.

2009-04-27 17:09-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Framework/PCProjectManager.m: Remove logic requiring projectWindow
	to be key in order to save file.   This was causing files in 
	tear-off editors to not be saved.  This change is in the saveFile
	method.

2009-04-22 16:31-EDT Gregory John Casamento <greg.casamento@gmail.com>
