@@ -1,3 +1,9 @@
+2009-09-15 Richard frith-Macdonald <rfm"gnu.org>
+
+	* Framework/PCMakefileFactory.m: generate makefiles with standard
+	preamble to determine GNUSTEP_MAKEFILES if possible, and warn if
+	not found.
+
 2009-09-15 Riccardo Mottola <rmottola@users.sf.net>
 	
 	* Headers/ProjectCenter/PCProject.h
